--- a/ObRoDecoder/CMakeLists.txt
+++ b/ObRoDecoder/CMakeLists.txt
@@ -3,3 +3,12 @@ cmake_minimum_required(VERSION 2.8)
 aux_source_directory(. SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 
+find_package(Threads REQUIRED)
+if(THREADS_HAVE_PTHREAD_ARG)
+  target_compile_options(ObRoDecoder PUBLIC "-pthread")
+endif()
+if(CMAKE_THREAD_LIBS_INIT)
+  target_link_libraries(ObRoDecoder "${CMAKE_THREAD_LIBS_INIT}")
+endif()
+
+TARGET_LINK_LIBRARIES(ObRoDecoder ${Boost_LIBRARIES} rt)
