--- a/SMMCGUI/source/CMakeLists.txt
+++ b/SMMCGUI/source/CMakeLists.txt
@@ -9,8 +9,13 @@ set(LIB_SOURCES
 )
 
 set(APP_SOURCES
-  main.cpp
+  GUI/mainwindow.cpp
   SMMCGUI.cpp
+  main.cpp
+)
+
+set(FORMS
+  ../forms/mainwindow.ui
 )
 
 set(LIBRARY_NAME smmcgui)
@@ -29,8 +34,17 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 
+set(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS_RELEASE} -fprofile-arcs -ftest-coverage")
+
+set_target_properties(Qt5::Core PROPERTIES MAP_IMPORTED_CONFIG_COVERAGE "RELEASE")
+
+include_directories(${Qt5Widgets_INCLUDE_DIRS})
+include_directories(${Qt5Core_INCLUDE_DIRS})
+
+qt5_wrap_cpp(HEADERS_MOC ${LIB_HEADERS})
+
 set(APPLICATION_NAME SMMCGUI)
-add_executable(${APPLICATION_NAME} ${APP_SOURCES})
+add_executable(${APPLICATION_NAME} ${APP_SOURCES} ${FORMS_HEADERS} ${HEADERS_MOC})
 
 target_link_libraries(${APPLICATION_NAME} Qt5::Widgets)
 
