--- a/SMMCGUI/source/CMakeLists.txt
+++ b/SMMCGUI/source/CMakeLists.txt
@@ -1,30 +1,19 @@
-set(APP_HEADERS
-  ${HEADER_DIR}/SMMCGUI.hpp
-  ${HEADER_DIR}/GUI/mainwindow.hpp
-)
-
-#set(UI_LINKED_HEADERS
-#  ${HEADER_DIR}/GUI/mainwindow.hpp
-#)
-
+#Defining the executable's sources
 set(APP_SOURCES
   ${SOURCE_DIR}/GUI/mainwindow.cpp
   ${SOURCE_DIR}/SMMCGUI.cpp
   ${SOURCE_DIR}/main.cpp
 )
 
-set(APP_FORMS
-  ${FORMS_DIR}/mainwindow.ui
-)
-
-#qt5_wrap_cpp(QT_WRAPPED_HEADERS ${UI_LIKED_HEADERS})
-#qt5_wrap_ui(QT_WRAPPED_FORMS ${APP_FORMS})
-
+#Creating the executable
 set(APPLICATION_NAME SMMCGUI)
-#add_executable(${APPLICATION_NAME} ${APP_SOURCES} ${QT_WRAPPED_FORMS} ${QT_WRAPPED_HEADERS})
 add_executable(${APPLICATION_NAME} ${APP_SOURCES})
 
+#Linking external libraries to the executable
 target_link_libraries(${APPLICATION_NAME} Qt5::Widgets)
+target_link_libraries(${APPLICATION_NAME} ${OpenCV_LIBS})
+target_link_libraries(${APPLICATION_NAME} Threads::Threads)
+target_link_libraries(${APPLICATION_NAME} rt)
 
 add_subdirectory(GUI)
 add_subdirectory(SMMC)
