shared memory progress n keys

--- a/SMMCGUI/CMakeLists.txt
+++ b/SMMCGUI/CMakeLists.txt
@@ -5,6 +5,9 @@ cmake_minimum_required(VERSION 3.9.0)
 #Setting C++ version to C++11
 set(CMAKE_CXX_STANDARD 11)
 
+#Setting build type to release
+set(CMAKE_BUILD_TYPE Release)
+
 #Setting directory for the outputted executable
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
