--- a/SMMCGUI/CMakeLists.txt
+++ b/SMMCGUI/CMakeLists.txt
@@ -41,7 +41,7 @@ find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIR})
 
 #Including Boost
-find_package(Boost COMPONENTS serialization filesystem REQUIRED)
+find_package(Boost COMPONENTS serialization REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 
 #Including pthread
