--- a/Habrok/source/CMakeLists.txt
+++ b/Habrok/source/CMakeLists.txt
@@ -19,4 +19,4 @@ target_link_libraries(${APPLICATION_NAME} ${OpenCV_LIBS})
 target_link_libraries(${APPLICATION_NAME} Boost::serialization)
 target_link_libraries(${APPLICATION_NAME} Threads::Threads)
 target_link_libraries(${APPLICATION_NAME} rt)
-target_link_libraries(${APPLICATION_NAME} smmc-lib)
+target_link_libraries(${APPLICATION_NAME} smmclib)
