image through shared memory working!

--- a/Habrok/source/CMakeLists.txt
+++ b/Habrok/source/CMakeLists.txt
@@ -3,7 +3,7 @@ set(APP_SOURCES
   ${SOURCE_DIR}/main.cpp
   ${SOURCE_DIR}/habrok.cpp
   ${SOURCE_DIR}/mainwindow.cpp
-  ${SOURCE_DIR}/imageprocessingthread.cpp
+  ${SOURCE_DIR}/imageprocessing.cpp
   ${SOURCE_DIR}/robotrecognizer.cpp
   ${SOURCE_DIR}/visionfieldhandler.cpp
   ${SOURCE_DIR}/imageprocessingsettings.cpp
