some bugs fixes, vor communicating, strategy wip

--- a/Vor/source/CMakeLists.txt
+++ b/Vor/source/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(APP_SOURCES
   ${SOURCE_DIR}/main.cpp
   ${SOURCE_DIR}/vor.cpp
+  ${SOURCE_DIR}/aifieldhandler.cpp
+  ${SOURCE_DIR}/strategy.cpp
 )
 
 #Creating the executable
