--- a/Vard/CMakeLists.txt
+++ b/Vard/CMakeLists.txt
@@ -11,6 +11,9 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS "-Wall")
 #set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
+#descomentar se estiver usando XBEE
+#add_definitions(-DXBEE)
+
 #Setting directory for the outputted executable
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
